<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="layout_header">My Nanodegree Apps!</string>
    <string name="btn_txt_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="btn_txt_scores_app">SCORES APP</string>
    <string name="btn_txt_library_app">LIBRARY APP</string>
    <string name="btn_txt_build_it_bigger_app">BUILD IT BIGGER</string>
    <string name="btn_txt_xyz_reader">XYZ READER</string>
    <string name="btn_txt_capstone_app">CAPSTONE:MY OWN APP</string>
</resources>
