<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:background="#ffc1e3ff">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/layout_header"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20px"/>

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_spotify_streamer"
        android:id="@+id/btn_spotify_streamer"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#ffffa429"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20px"
        android:onClick="showSpotifyStreamer"
        android:nestedScrollingEnabled="true" />

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_scores_app"
        android:id="@+id/btn_scores_app"
        android:background="#ffffa429"
        android:layout_below="@+id/btn_capstone_app"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="showScoresApp"
        android:layout_marginBottom="20px"/>



    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_library_app"
        android:id="@+id/btn_library_app"
        android:background="#ffffa429"
        android:layout_below="@+id/btn_scores_app"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="showLibraryApp"
        android:layout_marginBottom="20px"/>

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_build_it_bigger_app"
        android:id="@+id/btn_build_it_bigger_app"
        android:background="#ffffa429"
        android:layout_below="@+id/btn_build_it_bigger_app"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="showBuildItBiggerApp"
        android:layout_marginBottom="20px"/>

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_xyz_reader"
        android:id="@+id/btn_xyz_reader"
        android:background="#ffffa429"
        android:layout_below="@+id/btn_xyz_reader"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="showXyzReaderApp"
        android:layout_marginBottom="20px"/>


    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_capstone_app"
        android:id="@+id/btn_capstone_app"
        android:background="#ffff4921"
        android:layout_below="@+id/btn_xyz_reader"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="showCapstoneApp"
        android:layout_marginBottom="20px"/>

</LinearLayout>
